Fix horizontal scroll in teams

--- a/pokematic-frontend/src/shared-components/TeamDetails.css
+++ b/pokematic-frontend/src/shared-components/TeamDetails.css
@@ -36,6 +36,10 @@
     color: black;
     padding-bottom: 0 !important;
     min-width: 120px;
+    width: 100%;
+}
+
+.extra-long-text {
     width: 200% !important;
 }
 
